# smartlead-cli

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml
smartlead_cli/: __init__.py  args.py  client.py  config.py  confirm.py  main.py  output.py  schemas.py  serialize.py
smartlead_cli/commands/: __init__.py  campaigns.py  config_cmd.py  leads.py  raw.py  webhooks.py
