[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "smartlead-cli"
version = "0.1.1"
description = "Smartlead platform CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "tomlkit>=0.13.0",
    "typer>=0.12.0",
]
keywords = ["smartlead", "cli", "sales", "outreach"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/jzakirov/smartlead-cli"
Source = "https://github.com/jzakirov/smartlead-cli"
Issues = "https://github.com/jzakirov/smartlead-cli/issues"

[project.scripts]
smartlead = "smartlead_cli.main:app"

[tool.uv.build-backend]
module-name = "smartlead_cli"
module-root = ""

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
